--- a/css/gantt.scss
+++ b/css/gantt.scss
@@ -167,3 +167,11 @@
         opacity: 0.15;
     }
 }
+
+.weekend {
+    background: #f4f7f4;
+}
+
+.gantt_selected .weekend {
+    background: #f7eb91;
+}
